add logo & and styling

--- a/src/App.scss
+++ b/src/App.scss
@@ -113,7 +113,7 @@ $fourth-background: #fcfbfa;
 }
 
 .content_margin {
-  margin: 0px 100px 0px 28px;
+  margin: 0px 40px 0px 28px;
 }
 
 .full_width {
@@ -133,6 +133,20 @@ $fourth-background: #fcfbfa;
   justify-content: flex-end;
 }
 
+.logo{
+    position: absolute;
+    background: black;
+    z-index: 9;
+    left: calc(3vw);
+    position: relative;
+    img {
+      height: calc(4vw);
+      position: absolute;
+      margin-top: 37px;
+      // margin-top: calc(1vw + 20px);
+    }
+}
+
 .top-section {
   height: 60px;
   padding: 8px;
@@ -149,8 +163,8 @@ $fourth-background: #fcfbfa;
 }
 
 .breadcrumb {
-  height: calc(3.1948881789vw + 39.8817891374px);
-  background: #100f0e;
+  height: calc(3.1948881789vw + 26px);
+  background: rgb(28,28,28);
   position: absolute;
   width: 100%;
   max-width: 1600px;
@@ -159,6 +173,9 @@ $fourth-background: #fcfbfa;
   display: flex;
   justify-content: flex-end;
   @include button-container;
+  button{
+    font-size: 1em;
+  }
   .breadcrumb-content {
     display: flex;
     flex-direction: column;
@@ -453,8 +470,13 @@ nav {
   nav {
     height: 85px;
   }
+  .logo {
+    img {
+      margin-top: 30px;
+    }
+  }
   .breadcrumb {
-    height: calc(3.1948881789vw + 30px);
+    height: calc(3.1948881789vw + 11px);
   }
   .head-section {
     padding-top: 91px;
