--- a/src/App.scss
+++ b/src/App.scss
@@ -216,6 +216,25 @@ $fourth-background: #fcfbfa;
   }
 }
 
+.sub-head-section{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 5vw;
+    h2{
+      margin: 30px;
+    }
+    p {
+      width: 60vw;
+      text-align: center;
+      margin-bottom: 10px;
+    }
+    img {
+      width: 80vw;
+      margin-left: 6vw;
+    }
+}
+
 nav {
   transform: translateY(-100%);
   background: $primary-background;
