--- a/src/App.scss
+++ b/src/App.scss
@@ -215,7 +215,7 @@ $fourth-background: #fcfbfa;
   }
 }
 
-.sub-head-section{
+@mixin content-section {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -228,11 +228,27 @@ $fourth-background: #fcfbfa;
       text-align: center;
       margin-bottom: 10px;
     }
+}
+
+.sub-head-section {
+    @include content-section;
     img {
       width: 80vw;
       max-height: 100%;
       max-width: 100%;
     }
+}
+
+.feature-section {
+  @include content-section;
+  p {
+    margin-bottom:20px;
+  }
+  background-color:#ece9e6;
+  img {
+    width: 100%;
+    height: auto;
+  }
 }
 
 nav {
