update features page heading image

--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -235,7 +235,7 @@ $notification-bg-color: #000;
 
 .head-section-features {
   background: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.2)),
-    url(../../images/xenia-head-img-features.png);
+    url(../../images/xenia-head-img-features.jpg);
   @include head-section-mix;
 }
 
