--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -290,6 +290,7 @@ $notification-bg-color: #000;
   p {
     margin-bottom:20px;
     width: 78vw;
+    text-align: justify;
   }
 }
 .features-content-section{
