flex space-around

--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -573,7 +573,7 @@ nav {
   main {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: space-around;
     p {
       margin: 1em 0em 1em 0em;
       font-size: 0.8rem;
