--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -586,6 +586,18 @@ nav {
       margin: 0 0 1.1em 1.2em;
       line-height: 1.55;
       font-size: 0.8rem;
+      li{
+        list-style: none;
+      }
+      li::before {
+        content: "\2022";  /* Add content: \2022 is the CSS Code/unicode for a bullet */
+        color: red; /* Change the color */
+        font-weight: bold; /* If you want it to be bold */
+        font-size: 1.5em;
+        display: inline-block; /* Needed to add space between the bullet and the text */
+        width: 1em; /* Also needed for space (tweak if needed) */
+        margin-left: -1em; /* Also needed for space (tweak if needed) */
+      }
     }
   }
 }
