--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -22,6 +22,10 @@ $fifth-font-color: #fcfbfa;
 $sixth-font-color: rgb(188, 108, 55);
 $seventh-font-color: #FB0000;
 
+$font-size-10: 10px;
+$font-size-12: 12px;
+$font-size-20: 20px;
+
 $primary-background: rgba(0, 0, 0, 0.6);
 $second-background: rgba(0, 0, 0, 0.1);
 $third-background: #ece9e6;
@@ -62,7 +66,7 @@ $notification-bg-color: #000;
     padding: 0px 15px 0px 15px;
     background-color: $primary-button-color;
     border-color: $primary-theme-color;
-    font-size: 0.9em;
+    font-size: $font-size-10;
     font-weight: 900;
     transition: 0.2s;
     color: $primary-font-color;
@@ -523,12 +527,15 @@ nav {
       font-weight: 600;
       margin: 0 0 0.4em;
     }
+    h4{
+      font-size: $font-size-20;
+      font-weight: bold;
+    }
     p {
       color: $fourth-font-color;
-      font-weight: 400;
+      font-size: $font-size-12;
       margin: 0 0 1.1em;
       line-height: 1.55;
-      font-size: 0.9rem;
     }
     p:last-child {
       margin: 0;
@@ -576,7 +583,6 @@ nav {
     justify-content: space-around;
     p {
       margin: 1em 0em 1em 0em;
-      font-size: 0.8rem;
     }
     ul {
       list-style-position: outside;
@@ -585,7 +591,7 @@ nav {
       font-weight: 400;
       margin: 0 0 1.1em 1.2em;
       line-height: 1.55;
-      font-size: 0.8rem;
+      font-size: $font-size-12;
       li{
         list-style: none;
       }
