--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -627,7 +627,10 @@ nav {
       }
     }
     img {
-      width: 80%;
+      width: 70%;
+    }
+    img.icon {
+      width: 50%;
     }
     .side{
       margin: 0;
