aboutUs page - testimonials above footer

--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -642,6 +642,10 @@ nav {
 
 .main-content-section-about-quotation{
   @include content-section;
+  p, h4{
+    text-align: center;
+    font-size: 0.9em;
+  }
   p {
     margin-bottom:20px;
     width: 78vw;
