faq heading img

--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -251,7 +251,7 @@ $notification-bg-color: #000;
 
 .head-section-features, .head-section-faq{
   background: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.2)),
-    url(../../images/xenia-head-img-features.jpg);
+    url(../../images/faq/faq_sm.jpg);
   @include head-section-mix;
 }
 
