heading text black

--- a/src/components/Layout/Layout.scss
+++ b/src/components/Layout/Layout.scss
@@ -230,6 +230,9 @@ $notification-bg-color: #000;
       margin: 0 0 0.4em;
       color: $fifth-font-color;
     }
+    h2.black{
+      color: $third-font-color;
+    }
     p {
       width: 33em;
       margin: 0 0 1.5em;
