max-width & contact link

--- a/src/components/Layout/Layout.scss
+++ b/src/components/Layout/Layout.scss
@@ -315,6 +315,7 @@ $notification-bg-color: #000;
   p {
     margin-bottom:20px;
     width: 78vw;
+    max-width: 1500px;
     text-align: justify;
   }
 }
