--- a/src/components/Layout/Layout.scss
+++ b/src/components/Layout/Layout.scss
@@ -35,6 +35,13 @@ $sixth-background: #d0d0d0;
 
 $notification-bg-color: #000;
 
+.padding-0{
+  padding: 0 !important;
+}
+.padding-top-0{
+  padding-top: 0 !important;
+}
+
 @mixin head-section-content-sm-mix {
   .head-section-content {
       padding: 3.2em 38px 2em 6em;
