--- a/src/components/Layout/Layout.scss
+++ b/src/components/Layout/Layout.scss
@@ -175,7 +175,7 @@ $notification-bg-color: #000;
   display: flex;
   flex-direction: column;
   background: #fcfbfa;
-  height: 100vh;
+  min-height: 100vh;
   max-width: 1600px;
   margin: 0 auto;
 }
